syntax = "proto3";

package bff.v4;

import "google/api/annotations.proto";

option go_package = "spaco_bff-1112/api/bff/v4;v4";
option java_multiple_files = true;
option java_package = "dev.kratos.api.bff.v4";
option java_outer_classname = "bffV4";

// The greeting service definition.
service Device {
  // 注册或更新设备
  rpc register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
        post: "/registerDisplay"
        body: "*"
    };
  }

  // 修改设备名称
  rpc changeName (ChangeNameRequest) returns (ChangeNameReply) {
      option (google.api.http) = {
          put: "/changeDisplayName"
          body: "*"
      };
  }

  // 预部署
  rpc deploy (DeployRequest) returns (DeployReply) {
      option (google.api.http) = {
          post: "/preDeploy"
          body: "*"
      };
  }
}

// The request message containing the user's name.
message RegisterRequest {
  string appVersion = 1;
  string displayName = 2;
  string hardwareKey = 3;
  string serverKey = 4;
}

// The response message containing the greetings
message RegisterReply {
  string data = 1;
}

// The request message containing the user's name.
message ChangeNameRequest {
  string displayName = 1;
  string hardwareKey = 2;
}

// The response message containing the greetings
message ChangeNameReply {
  bool data = 1;
}

// 获取设备组信息
message GetDGRequest {
  string mcNo = 1;
}
message GetDGReply {
  message DGItem {
      string typeid = 1;
      string number = 2;
      string name = 3;
  }
  repeated DGItem arrs = 1;
}

message DeployRequest {
  string deployCode = 1;
  string storeNumber = 2;
  string displayGroupNumber = 3;
  string hardwareKey = 4;
}
message DeployReply {
  string displayname = 1;
  string serverkey = 2;
  int64 clientorientation = 3;
  string serveraddress = 4;
  int64 clientupdatecycle = 5;
  int64 loglevel = 6;
}

message UpdeteRequest {
  string hardwareKey = 1;
  string version = 2;
  message Device {
    string name = 1;
    string model = 2;
    string version = 3;
  }
  repeated Device device = 3;
}

message UpdateReply {
  string code = 1;
  string msg = 2;
}